toolkit/themes/shared/in-content/common.inc.css
/* ... */
*
|
*
#
categories
>
*
|
*
.
category
[
selected
]
:
hover
:
active
*
|
*
#
categories
>
*
|
*
.
category
.
selected
:
hover
:
active
{
color
:
var
(
-
-
in
-
content
-
category
-
text
-
selected
-
active
)
;
background
-
color
:
var
(
-
-
in
-
content
-
category
-
background
-
selected
-
active
)
;
}
*
|
*
#
categories
[
keyboard
-
navigation
=
"
true
"
]
:
-
moz
-
focusring
>
*
|
*
.
category
[
current
]
{
outline
:
var
(
-
-
in
-
content
-
category
-
outline
-
focus
)
;
}
*
|
*
.
category
-
name
{
font
-
size
:
1
.
07em
;
line
-
height
:
1
.
4em
;
padding
-
bottom
:
2px
;
padding
-
inline
-
start
:
9px
;
margin
:
0
;
-
moz
-
user
-
select
:
none
;
}
*
|
*
.
category
-
icon
{
width
:
24px
;
height
:
24px
;
-
moz
-
context
-
properties
:
fill
fill
-
opacity
;
fill
:
currentColor
;
}
*
|
*
.
category
[
selected
]
>
*
|
*
.
category
-
icon
*
|
*
.
category
.
selected
>
*
|
*
.
category
-
icon
{
fill
-
opacity
:
1
;
}
media
(
max
-
width
:
830px
)
{
#
categories
{
width
:
118px
;
}
.
category
-
icon
+
.
category
-
name
{
display
:
none
;
}
#
categories
>
.
category
{
padding
-
inline
-
start
:
13px
;
margin
-
inline
-
end
:
33px
;
}
.
main
-
content
{
padding
-
left
:
0
;
padding
-
right
:
0
;
}
.
pane
-
container
{
margin
-
inline
-
end
:
10px
;
}
}
*
|
*
.
header
{
margin
-
inline
-
end
:
4px
;
margin
-
bottom
:
15px
;
padding
-
bottom
:
15px
;
-
moz
-
box
-
align
:
baseline
;
}
*
|
*
.
header
-
name
{
font
-
size
:
1
.
46em
;
font
-
weight
:
300
;
line
-
height
:
1
.
3em
;
margin
:
0
;
-
moz
-
user
-
select
:
none
;
}
html
|
select
[
size
]
[
multiple
]
xul
|
listheader
xul
|
richlistbox
{
-
moz
-
appearance
:
none
;
margin
-
left
:
0
;
margin
-
right
:
0
;
background
-
color
:
var
(
-
-
in
-
content
-
box
-
background
)
;
border
:
1px
solid
var
(
-
-
in
-
content
-
box
-
border
-
color
)
;
border
-
radius
:
2px
;
color
:
var
(
-
-
in
-
content
-
text
-
color
)
;
}
xul
|
listheader
{
border
-
bottom
:
none
;
border
-
bottom
-
left
-
radius
:
0
;
border
-
bottom
-
right
-
radius
:
0
;
padding
-
bottom
:
1px
;
box
-
shadow
:
inset
0
-
1px
var
(
-
-
in
-
content
-
border
-
color
)
;
}
xul
|
listheader
+
xul
|
richlistbox
{
margin
-
top
:
0
;
border
-
top
:
none
;
border
-
top
-
left
-
radius
:
0
;
border
-
top
-
right
-
radius
:
0
;
}
html
|
select
[
size
]
[
multiple
]
>
html
|
option
xul
|
treechildren
:
:
-
moz
-
tree
-
row
{
padding
:
0
.
3em
;
margin
:
0
;
border
:
none
;
border
-
radius
:
0
;
background
-
image
:
none
;
}
xul
|
treechildren
:
:
-
moz
-
tree
-
row
(
multicol
odd
)
{
background
-
color
:
var
(
-
-
in
-
content
-
box
-
background
-
odd
)
;
}
html
|
select
[
size
]
[
multiple
]
>
html
|
option
:
hover
xul
|
treechildren
:
:
-
moz
-
tree
-
row
(
hover
)
{
background
-
color
:
var
(
-
-
in
-
content
-
item
-
hover
)
;
}
xul
|
treechildren
:
:
-
moz
-
tree
-
row
(
selected
)
{
background
-
color
:
var
(
-
-
in
-
content
-
item
-
selected
)
;
}
xul
|
tree
{
-
moz
-
appearance
:
none
;
font
-
size
:
1em
;
border
:
1px
solid
var
(
-
-
in
-
content
-
box
-
border
-
color
)
;
border
-
radius
:
2px
;
background
-
color
:
var
(
-
-
in
-
content
-
box
-
background
)
;
margin
:
0
;
}
xul
|
tree
:
-
moz
-
focusring
xul
|
richlistbox
:
-
moz
-
focusring
{
border
-
color
:
var
(
-
-
in
-
content
-
border
-
active
)
;
box
-
shadow
:
0
0
0
1px
var
(
-
-
in
-
content
-
border
-
active
)
0
0
0
4px
var
(
-
-
in
-
content
-
border
-
active
-
shadow
)
;
}
xul
|
treecols
{
-
moz
-
appearance
:
none
;
border
:
none
;
border
-
bottom
:
1px
solid
var
(
-
-
in
-
content
-
border
-
color
)
;
padding
:
0
;
}
xul
|
treecol
:
not
(
[
hideheader
=
"
true
"
]
)
xul
|
treecolpicker
{
-
moz
-
appearance
:
none
;
border
:
none
;
background
-
color
:
var
(
-
-
in
-
content
-
box
-
background
-
hover
)
;
color
:
#
808080
;
padding
:
5px
10px
;
}
xul
|
treecol
:
not
(
[
hideheader
=
"
true
"
]
)
:
not
(
[
sortable
=
"
false
"
]
)
:
hover
xul
|
treecolpicker
:
hover
{
background
-
color
:
var
(
-
-
in
-
content
-
box
-
background
-
active
)
;
color
:
var
(
-
-
in
-
content
-
text
-
color
)
;
}
xul
|
treecol
:
not
(
[
hideheader
=
"
true
"
]
)
:
not
(
:
first
-
child
)
xul
|
treecolpicker
{
border
-
inline
-
start
-
width
:
1px
;
border
-
inline
-
start
-
style
:
solid
;
border
-
image
:
linear
-
gradient
(
transparent
0
%
transparent
20
%
var
(
-
-
in
-
content
-
box
-
border
-
color
)
20
%
var
(
-
-
in
-
content
-
box
-
border
-
color
)
80
%
transparent
80
%
transparent
100
%
)
1
1
;
}
xul
|
treecol
[
sortDirection
]
:
not
(
[
hideheader
=
"
true
"
]
)
>
xul
|
*
.
treecol
-
sortdirection
{
list
-
style
-
image
:
url
(
"
chrome
:
/
/
global
/
skin
/
in
-
content
/
dropdown
.
svg
"
)
;
-
moz
-
context
-
properties
:
fill
;
fill
:
currentColor
;
width
:
18px
;
height
:
18px
;
}
xul
|
treecol
[
sortDirection
=
"
ascending
"
]
:
not
(
[
hideheader
=
"
true
"
]
)
>
xul
|
*
.
treecol
-
sortdirection
{
transform
:
scaleY
(
-
1
)
;
}
xul
|
treechildren
:
:
-
moz
-
tree
-
row
{
min
-
height
:
2em
;
}
xul
|
treechildren
:
:
-
moz
-
tree
-
cell
-
text
xul
|
treechildren
:
:
-
moz
-
tree
-
twisty
xul
|
treechildren
:
:
-
moz
-
tree
-
image
{
color
:
var
(
-
-
in
-
content
-
text
-
color
)
;
}
xul
|
treechildren
:
:
-
moz
-
tree
-
cell
-
text
(
selected
)
xul
|
treechildren
:
:
-
moz
-
tree
-
twisty
(
selected
)
xul
|
treechildren
:
:
-
moz
-
tree
-
image
(
selected
)
{
color
:
var
(
-
-
in
-
content
-
selected
-
text
)
;
}
.
message
-
bar
{
background
-
color
:
var
(
-
-
in
-
content
-
box
-
info
-
background
)
;
border
-
radius
:
4px
;
min
-
height
:
32px
;
-
moz
-
box
-
align
:
center
;
padding
:
4px
;
}
.
message
-
bar
-
description
{
margin
:
2px
0
;
line
-
height
:
1
.
25
;
}
.
message
-
bar
-
content
>
.
message
-
bar
-
button
{
background
-
color
:
var
(
-
-
grey
-
90
-
a10
)
;
border
:
none
;
border
-
radius
:
2px
;
height
:
24px
;
margin
-
inline
-
start
:
8px
;
padding
:
0
8px
;
}
.
message
-
bar
-
content
>
.
message
-
bar
-
button
:
hover
{
background
-
color
:
var
(
-
-
grey
-
90
-
a20
)
;
}
/* ... */

